changed grid spacing and minor fixes

--- a/styles/home/_about.scss
+++ b/styles/home/_about.scss
@@ -1,7 +1,8 @@
 .aboutgrid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  gap: clamp(1rem, 8vw, 7rem);
+  // gap: clamp(1rem, 8vw, 7rem);
+  gap: 3rem;
 }
 
 .about {
@@ -12,31 +13,32 @@
   }
 
   &__body {
-    font-size: clamp(1rem, 5vw, 1.25rem);
+    font-size: clamp(1rem, 2.5vw, 1.05rem);
     color: $grayscale-600;
   }
 
   &__bodygrid {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
   }
 
   &__downloadicon svg {
     fill: white;
-    height: 2rem;
+    height: 1.75rem;
   }
 
   &__download {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    @include button-size(1rem);
+    gap: 1rem;
+    @include button-size(0.9rem);
     background-color: $brand-primary;
-    max-width: 14.75rem;
+    width: fit-content;
     border-radius: $border-radius;
     color: $grayscale-100;
     cursor: pointer;
-    font-weight: 500;
+    font-weight: 600;
   }
 }
